Compositor: Auto Render doesn't work #56875

Closed
opened 2018-09-22 06:17:37 +02:00 by Shinsuke Irie · 11 comments
Member

System Information
Ubuntu 18.04

Blender Version
Broken: 2.79-2.79b
Worked: 2.78c or earlier

Short description of error
Compositor that Auto Render is enabled doesn't re-render or composite even when changes on 3D edits happen.
Confirmed with both Blender Internal and Cycles.

Exact steps for others to reproduce the error
auto_render_test.blend

  • Open auto_render_test.blend
  • On 3D viewport, edit something (e.g. Move default cube)
    and then nothing happens with v2.79 (or later)...
**System Information** Ubuntu 18.04 **Blender Version** Broken: 2.79-2.79b Worked: 2.78c or earlier **Short description of error** Compositor that Auto Render is enabled doesn't re-render or composite even when changes on 3D edits happen. Confirmed with both Blender Internal and Cycles. **Exact steps for others to reproduce the error** [auto_render_test.blend](https://archive.blender.org/developer/F4794270/auto_render_test.blend) - Open auto_render_test.blend - On 3D viewport, edit something (e.g. Move default cube) and then nothing happens with v2.79 (or later)...
Author
Member

Added subscriber: @IRIEShinsuke

Added subscriber: @IRIEShinsuke

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

It does work when you are using the Defocus Node, using the Z-Buffer of the current scene. Could be that this is the only node that does actually trigger a render update, but then the Auto Render button would be quite misleading indeed.

It does work when you are using the Defocus Node, using the Z-Buffer of the current scene. Could be that this is the only node that does actually trigger a render update, but then the Auto Render button would be quite misleading indeed.

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

Confirmed, would guess something went wrong in the update notifiers…

Confirmed, would guess something went wrong in the update notifiers…

Bisecting points to 4cf7fc3b3a as breaking commit. Not sure what went wrong there, that is rather large commit :/

Bisecting points to 4cf7fc3b3a as breaking commit. Not sure what went wrong there, that is rather large commit :/
Lukas Stockner was assigned by Bastien Montagne 2018-09-23 16:40:05 +02:00

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner

Tried undoing some changes done in snode_set_context() but no success so far. @LukasStockner this falls on your desk am afraid. ;)

Tried undoing some changes done in `snode_set_context()` but no success so far. @LukasStockner this falls on your desk am afraid. ;)

This issue was referenced by 24330f679e

This issue was referenced by 24330f679e39f83cbbe4b85625b08d933ff4a14e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56875
No description provided.