Fix T56875: Auto Render not working after render pass name refactor

The default compositor node update function sets the need_exec flag on the node
which the Auto Render feature checks, but the custom update function that was
added as part of rB4cf7fc3b3a4d didn't do so.

Therefore, the two custom update functions that were added now also call the
default update function.